src/micro-interactions/_heart.scss
/* ... */
html.no-reduce-motion .status .icon-button.star-icon.activate .icon-star {
  left: -28px;
}

//  If number enabled in core
html.no-reduce-motion
  .status
  .icon-button.icon-button--with-counter.star-icon
  .icon-star {
  left: 0;
  margin-top: 1px;
  position: absolute;
}

html.no-reduce-motion
  .status
  .icon-button.icon-button--with-counter.star-icon.activate
  .icon-star {
  left: -40px;
  margin-top: -1px;
  position: absolute;
}

html.no-reduce-motion
  .star-icon.icon-button--with-counter
  .icon-button__counter {
  margin-left: 20px;
}

html.no-reduce-motion
  .detailed-status__action-bar
  .icon-button.star-icon.activate
  .icon-star {
  left: -29px;
}

@media (width <= 890px) {
  html.no-reduce-motion .icon-button.star-icon.activate .icon-star {
    top: -40px;
  }
}

@media (prefers-reduced-motion: no-preference) {
  html.no-reduce-motion .icon-button.star-icon.activate .icon-star {
    //  28 frames
    animation: heart-animate 0.8s steps(28) forwards !important;
  }
}

@media screen and (width <= 889px) {
  html.no-reduce-motion .status .icon-button.star-icon.activate .icon-star {
    left: -28px;
  }
}

// Body
.layout-single-column,
.layout-multiple-columns {
  // Left sidebar column links
  .column-link .icon-star {
    background-image: var(--icon-heart-column-link);
  }

  .column-link.active .icon-star {
    background-image: var(--icon-heart-column-link-active);
  }

  .notification-group--favourite .icon-star,
  .notification-favourite .icon-star {
    background-image: var(--icon-heart-notification);
    background-repeat: no-repeat;
  }

  .notification__filter-bar .icon-star,
  .detailed-status__action-bar .icon-button .icon-star,
  .status__action-bar .icon-button .icon-star {
    background-image: var(--icon-heart);
  }

  .notification__filter-bar .active .icon-star {
    background-image: var(--icon-heart-active);
  }

  .detailed-status__action-bar .active:not(.activated) .icon-star,
  .status__action-bar .active:not(.activated) .icon-star {
    background-image: var(--icon-heart-active-red);
  }

  .icon-button.star-icon.active,
  .notification-group--favourite .star-icon,
  .notification-favourite .star-icon {
    color: var(--color-red);
  }

  // Favourite counter follows the heart's red on hover/active.
  button.icon-button:hover .icon-star ~ span,
  button.icon-button.active .icon-star ~ span {
    color: var(--color-red);
  }

  .detailed-status__action-bar .icon-button:hover .icon-star,
  .detailed-status button.icon-button:hover .icon-star,
  .status button.icon-button:hover .icon-star {
    background-image: var(--icon-heart-hover);
  }
}

